Fix scrollbar no longer showing on the right

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header {
     justify-content: space-between;
     height: 30px;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .header-left {
@@ -66,7 +67,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 90px);
 }
 
 .back-btn {
@@ -145,7 +146,6 @@ footer ul {
 footer ul li {
     position: relative;
     text-align: center;
-    margin: 10px;
 }
 
 footer ul li i {
